--- a/me3.html
+++ b/me3.html
@@ -16,6 +16,6 @@
 
    <div class="dep"> 
     <video controls autoplay height="550" width="700">
-      <source src="LoveTik.com - 7496511443638979871-bytevc1_1080p_564195-1.mp4">
+      <source src="LoveTik.com - 7496511443638979871-bytevc1_1080p_564195-1.mp4" type="video/mp4">
     </video>
   </div>
